k8s/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: flag-service
  namespace: flag-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flag-service
  template:
    metadata:
      labels:
        app: flag-service
    spec:
      containers:
        - name: flag-service
          image: 434473100946.dkr.ecr.us-east-1.amazonaws.com/flag-service:v1.0.0
          ports:
            - containerPort: 8002
              name: http
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
