k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flag-service-ingress
  namespace: flag-service
spec:
  ingressClassName: nginx
  rules:
    - host: flag-service
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flag-service
                port:
                  number: 8002
